--- a/src/components/HomeSection/homeSection.scss
+++ b/src/components/HomeSection/homeSection.scss
@@ -22,14 +22,26 @@
     max-width: 600px;
     margin: 0 auto;
   }
-  .image-wrapper, .video-wrapper {
+  .image-wrapper {
     margin-top: 50px;
     max-width: 90vw;
-    img,
-    > div > iframe,
-    > div > video {
+    display: flex;
+    img {
       width: 100%;
-      // transform: translateZ(0.1px); //IDEA: CSS only parallax effect – related with TODO in main.scss
+      // transform: translateZ(0.1px); // TODO: CSS only parallax effect – related with task in main.scss
+    }
+  }
+  .video-wrapper {
+    position: relative;
+    padding-top: 56.25%; // Player ratio: 100 / (1280 / 720)
+    margin-top: 50px;
+    max-width: 90vw;
+    .video-player {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
 }
